...

  @override
  Widget build(BuildContext context) {
    final controller = Get.find<JobsController>();

    return JobStepLayout(
      title: "Job Core",
      step: "Step 1 of 4",
      sub: "Enter the essential details about the position.",
      progress: 0.25,
      children: [
        JobCard(
          child: Column(
...
