...
          child: Column(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              _buildSuccessIcon(),
              const SizedBox(height: 30),
              Text(
                "Vacancy Published Successfully!",
                textAlign: TextAlign.center,
                style: AppTextStyles.h1,
              ),
              const SizedBox(height: 15),
              Text(
                "Your job listing is now live and ready to receive applications. You can share the link below with potential candidates.",
...
