...
                ),
                elevation: 0,
              ),
              child: Obx(
                () => Text(
                  controller.currentStep.value == 2
                      ? "Lanjut ke Berkas"
                      : "Kirim Lamaran",
                  style: AppTextStyles.button.copyWith(fontSize: 16),
                ),
              ),
            ),
          ),
        ],
...
