...
  }

  Widget _buildHeadlines() {
    return Column(
      children: [
        Text(
          "Application Submitted Successfully!",
          textAlign: TextAlign.center,
          style: AppTextStyles.h1.copyWith(fontSize: 28),
        ),
        const SizedBox(height: 16),
        Text(
          "Your profile has been sent to the hiring team. You can now track your progress using your unique ticket code.",
...
